Added support for Tag Helpers. Created the Details and Index views and Home controller.

--- a/MMMBuilds/Views/Mech/List.cshtml
+++ b/MMMBuilds/Views/Mech/List.cshtml
@@ -16,7 +16,7 @@
 
                     <div class="d-flex justify-content-between mt-2">
                         <h2 class="text-start">
-                            <a class="mech-link">@mech.Name</a>
+                            <a class="mech-link" asp-controller="Mech" asp-action="Details" asp-route-id="@mech.MechId">@mech.Name</a>
                         </h2>
                         <h5 class="text-nowrap">
                             @mech.Price.ToString("c")
