--- a/MMMBuilds/wwwroot/css/site.css
+++ b/MMMBuilds/wwwroot/css/site.css
@@ -36,6 +36,10 @@ h6, .h6 {
     font-size: 16px;
 }
 
+.bg-primary {
+    background-color: #076ae1 !important;
+}
+
 .navbar-dark .navbar-nav .nav-link {
     color: #E5E5E5;
 }
