--- a/MMMBuilds/Views/Mech/Details.cshtml
+++ b/MMMBuilds/Views/Mech/Details.cshtml
@@ -10,5 +10,14 @@
         <h4>@Model.ShortDescription</h4>
         <p>@Model.LongDescription</p>
         <h3 class="pull-right">@Model.Price.ToString("c")</h3>
+
+        <div class="addToCart">
+            <p class="button">
+                <a class="btn btn-secondary" 
+                asp-controller="ShoppingCart" 
+                asp-action="AddToShoppingCart"
+                asp-route-mechId="@Model.MechId">Add Item</a>
+            </p>
+        </div>
     </div>
 </div>
