--- a/MMMBuilds/Views/Mech/List.cshtml
+++ b/MMMBuilds/Views/Mech/List.cshtml
@@ -7,24 +7,7 @@
 
     @foreach (var mech in Model.Mechs)
     {
-        <div class="col">
-            <div class="card mech-card">
-                <img src="@mech.ImageThumbUrl" class="card-img-top" alt="@mech.Name">
-                <div class="card-body mech-button">
-                    <h4 class="d-grid">
-                    </h4>
-
-                    <div class="d-flex justify-content-between mt-2">
-                        <h2 class="text-start">
-                            <a class="mech-link" asp-controller="Mech" asp-action="Details" asp-route-id="@mech.MechId">@mech.Name</a>
-                        </h2>
-                        <h5 class="text-nowrap">
-                            @mech.Price.ToString("c")
-                        </h5>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <partial name="_MechCard" model="mech" />
     }
 
 </div>
