--- a/MMMBuilds/Views/Shared/_Layout.cshtml
+++ b/MMMBuilds/Views/Shared/_Layout.cshtml
@@ -1,48 +1,52 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>MMM Builds WWW</title>
-        <link href='https://fonts.googleapis.com/css?family=Work+Sans' rel='stylesheet' type='text/css'>
-        <script src="~/lib/jquery/jquery.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>MMM Builds WWW</title>
+	<link href='https://fonts.googleapis.com/css?family=Work+Sans' rel='stylesheet' type='text/css'>
+	@* <script src="~/lib/jquery/jquery.js"></script> *@
 
-	    <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
-	    <link href="~/css/site.css" rel="stylesheet" />
-        <base href="/" /> @* This will override the controller/view relative paths with the root of the app. *@
-    </head>
-    <body id="mbw">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary"
-                 aria-label="MMM Builds WWW navigation header">
-                <div class="container-xl">
-                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                        <img src="images/mmm_builds_logo.png" height="65" class="d-inline-block align-top" alt="MMM Builds WWW Logo">
-                    </a>
+	<link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link href="~/css/site.css" rel="stylesheet" />
+	<base href="/" /> @* This will override the controller/view relative paths with the root of the app. *@
+</head>
 
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+<body id="mmmbuildswww">
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary"
+			 aria-label="MMM Builds WWW navigation header">
+			<div class="container-xl">
+				<a class="navbar-brand" asp-controller="Home" asp-action="Index">
+					<img src="images/mmm_builds_logo.png" height="65" class="d-inline-block align-top" alt="MMM Builds WWW Logo">
+				</a>
 
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a asp-controller="Home" asp-action="Index" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-controller="Mech" asp-action="List" class="nav-link">Mechanisms</a>
-                        </li>
-                    </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+						aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-        <div class="container">
-            @RenderBody()
-        </div>
-    </body>
+				<div class="collapse navbar-collapse" id="navbarCollapse">
+
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<vc:category-menu></vc:category-menu>
+
+						<li class="nav-item">
+							<a asp-controller="Contact" asp-action="Index" class="nav-link">Contact</a>
+						</li>
+					</ul>
+
+					<vc:shopping-cart-summary></vc:shopping-cart-summary>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<div class="container">
+		@RenderBody()
+	</div>
+
+	<script src="~/lib/bootstrap/js/bootstrap.bundle.js"></script>
+</body>
 </html>
