--- a/MMMBuilds/Views/_ViewImports.cshtml
+++ b/MMMBuilds/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using MMMBuilds.Models
 @using MMMBuilds.ViewModels
+@using MMMBuilds.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MMMBuilds
+@addTagHelper MMMBuilds.TagHelpers.*, MMMBuilds
